agregar cambio del archivo html

--- a/html.html
+++ b/html.html
@@ -1,5 +1,9 @@
-gghghghghh
-jhjhjh
-hhjhjh
-
-khjhjhj
+<!DOCTYPE html>
+<html>
+<head>
+	<title>es una prueba</title>
+</head>
+<body>
+<h1>hola mudo :v</h1>
+</body>
+</html>
