agragando cambios menores a los archivos

--- a/html.html
+++ b/html.html
@@ -9,6 +9,6 @@
 <p>hoooooooooooooooooooollllllllllllllllllllaaaaaaaaaaaaaaaaaaaaaaaaaaaa ;v</p>
 
 <a href="www.google.com">hola</a>
-
+<img src="img1/img1.png">
 </body>
 </html>
