agregando fotos y mas cosas :v

--- a/html.html
+++ b/html.html
@@ -10,5 +10,8 @@
 
 <a href="www.google.com">hola</a>
 <img src="img/img1.png">
+
+<a href="www.facebook.com">facebook</a>
+<img src="img/img2.png">
 </body>
 </html>
