agregando otra foto la misma 3 veces y cambios menores

--- a/html.html
+++ b/html.html
@@ -13,5 +13,9 @@
 
 <a href="www.facebook.com">facebook</a>
 <img src="img/img2.png">
+
+<a href="www.bing.com">bing</a>
+<img src="img/img3.png">
+<p>jugando con los cambos en git</p>
 </body>
 </html>
