agregando un cambio menor

--- a/html.html
+++ b/html.html
@@ -17,5 +17,6 @@
 <a href="www.bing.com">bing</a>
 <img src="img/img3.png">
 <p>jugando con los cambos en git</p>
+<pre> hola :v</pre>
 </body>
 </html>
